--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next_button" />
+        android:text="@string/next_button"
+        app:icon="@drawable/ic_baseline_arrow_right_24"/>
 
 </LinearLayout>
